Stopped overflow of html and body and set heights for both to 100% and no more scrolling white space

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,11 @@
-html, body {
-  margin: 0;
-  padding: 0;
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
 }
 
 .error-message {
